--- a/main.html
+++ b/main.html
@@ -7,7 +7,15 @@
 </head> 
   
 <body> 
-    <h1><center>About Shyamsundhar Sankaramurthy</center></h1> 
+    <header>
+        <h1>Shyamsundhar Sankaramurthy</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    
     <p>I'm a 2nd year at VIT Chennai working on a B.Tech degree in Electronics and Computer Engineering. I'm a passionate 
         computer programmer. </p> 
  
