--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
-<!DOCTYPE html> 
-<html> 
-  
-<head> 
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>About Shyamsundhar Sankaramurthy</title> 
-</head> 
-  
-<body> 
-    <header>
-        <h1>Shyamsundhar Sankaramurthy</h1>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-    
-    <p>I'm a 2nd year at VIT Chennai working on a B.Tech degree in Electronics and Computer Engineering. I'm a passionate 
-        computer programmer. </p> 
- 
-</body> 
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Person Profile</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+    <div class="container">
+        <header class="header">
+            <h1>Shyamsundhar Sankaramurthy</h1>
+            <p>Web Development Enthusiast</p>
+        </header>
+        <div class="profile">
+            <img src="profile pic.png" alt="Profile Photo" class="profile-photo">
+        </div>
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Shyamsundhar Sankaramurthy, a 2nd year Engineering student doing my B.Tech in Electronics and Computer Science at Vellor Institute of Technology Chennai. I love to tackle coding problems and leanring new skills to further enhance my skilset and becoem an asset to the company and or clients I work for.</p>
+        </section>
+        <section class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li><i class="fas fa-code"></i> HTML</li>
+                <li><i class="fas fa-paint-brush"></i> CSS</li>
+                <li><i class="fas fa-laptop-code"></i> Python</li>
+                <li><i class="fas fa-laptop-code"></i> C/C++</li>
+                <li><i class="fas fa-database"></i> SQL</li>
+            </ul>
+        </section>
+        <section class="contact">
+            <h2>Contact</h2>
+            <p><i class="fas fa-envelope"></i> shyamsundhars42@gmail.com</p>
+            <p><i class="fas fa-phone"></i> +91 7338836651</p>
+        </section>
+        <footer class="footer">
+            <p>&copy; 2024 Shyamsundhar Sankaramurthy</p>
+        </footer>
+    </div>
+</body>
 </html>
