--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <section class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Shyamsundhar Sankaramurthy, a 2nd year Engineering student doing my B.Tech in Electronics and Computer Science at Vellor Institute of Technology Chennai. I love to tackle coding problems and leanring new skills to further enhance my skilset and becoem an asset to the company and or clients I work for.</p>
+            <p>Hello! I'm Shyamsundhar Sankaramurthy, a 2nd year Engineering student doing my B.Tech in Electronics and Computer Science at Vellore Institute of Technology Chennai. I love to tackle coding problems and learning new skills to further enhance my skillset and become an asset to the company and or clients I work for.</p>
         </section>
         <section class="skills">
             <h2>Skills</h2>
